finalize post and home ejs

--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
     "body-parser": "^1.20.0",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "nodemon": "^2.0.16"
   },
   "name": "blog-website",
   "description": "Creating a Blog Website",
   "version": "1.0.0",
   "main": "app.js",
-  "devDependencies": {},
   "scripts": {
     "start": "nodemon app.js"
   },
